--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple express app displaying integration with mongolab using mongoose models",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/mocha/bin/mocha -u exports test/**/*"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
     "express": "^4.14.0",
     "mongoose": "^4.5.3",
     "pug": "^2.0.0-beta3"
+  },
+  "devDependencies": {
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
   }
 }
