--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.5.3",
-    "pug": "^2.0.0-beta3"
+    "mongoose": "^4.5.3"
   },
   "devDependencies": {
     "mocha": "^2.5.3",
