--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongoose-express-example",
+  "name": "todo-backend",
   "version": "1.0.0",
   "description": "A simple express app displaying integration with mongolab using mongoose models",
   "main": "app.js",
@@ -19,6 +19,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-validation": "^1.0.0",
+    "joi": "^9.0.0",
     "mongoose": "^4.5.3"
   },
   "devDependencies": {
